--- a/HTML pages/HomePage.html
+++ b/HTML pages/HomePage.html
@@ -3,9 +3,9 @@
 
 <head>
   <title>Human Resource Website</title>
-  <link rel="stylesheet" href="styles/HomePage.css">
-  <link rel="stylesheet" href="styles/footer.css">
-  <link rel="icon" type="image/x-icon" href="Img/data-science.ico">
+  <link rel="stylesheet" href="../styles/HomePage.css">
+  <link rel="stylesheet" href="../styles/footer.css">
+  <link rel="icon" type="image/x-icon" href="../Img/data-science.ico">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             practices.</p>
         </div>
         <div class="job-image">
-          <img src="Img/HR.jpg" alt="Job 1 Image">
+          <img src="../Img/HR.jpg" alt="Job 1 Image">
         </div>
       </li>
       <li>
@@ -41,7 +41,7 @@
             external threats like hackers or crackers who want access for malicious purposes.</p>
         </div>
         <div class="job-image">
-          <img src="Img/Cyber-security .jpeg" alt="Job 2 Image">
+          <img src="../Img/Cyber-security .jpeg" alt="Job 2 Image">
         </div>
       </li>
       <li>
@@ -52,7 +52,7 @@
             patterns, develop prediction systems, present the data in a clear manner.</p>
         </div>
         <div class="job-image">
-          <img src="Img/data-science.jpg" alt="Job 3 Image">
+          <img src="../Img/data-science.jpg" alt="Job 3 Image">
         </div>
       </li>
     </ul>
