--- a/HTML pages/coverPage.html
+++ b/HTML pages/coverPage.html
@@ -3,9 +3,9 @@
 
 <head>
   <title>Team</title>
-  <link rel="stylesheet" href="styles/employees_page.css">
-  <link rel="stylesheet" href="styles/footer.css">
-  <link rel="icon" type="image/x-icon" href="Img/data-science.ico">
+  <link rel="stylesheet" href="../styles/employees_page.css">
+  <link rel="stylesheet" href="../styles/footer.css">
+  <link rel="icon" type="image/x-icon" href="../Img/data-science.ico">
 
 </head>
 
